--- a/css/style.css
+++ b/css/style.css
@@ -237,7 +237,7 @@ section {
 .layer {
     width: 100%;
     height: 0;
-    background: linear-gradient(rgba(0,0,0,0.1), #ff004f);
+    background: linear-gradient(rgba(0,0,0,0.1), var(--main-color));
     position: absolute;
     border-radius: 8px;
     left: 0;
