--- a/css/style.css
+++ b/css/style.css
@@ -454,7 +454,7 @@ section {
 }
 @media (max-width: 820px) {
     html {
-        overflow-x: hidden;
+        overflow-x: none;
     }
     #menu-icon{
         display: block;
